--- a/packages/saltcorn-builder/package.json
+++ b/packages/saltcorn-builder/package.json
@@ -16,8 +16,8 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
-    "@craftjs/core": "0.1.0-beta.17",
-    "@craftjs/layers": "0.1.0-beta.17",
+    "@craftjs/core": "0.1.0-beta.20",
+    "@craftjs/layers": "0.1.0-beta.20",
     "@fonticonpicker/react-fonticonpicker": "^1.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
@@ -37,5 +37,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "styled-components": "^4.4.1"
   }
 }
